--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -14,11 +14,11 @@
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
     
-    <!-- Our CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
-    <!-- The div that holds our map -->
+    <!-- div that holds map -->
     <div id="mapid"></div>
 
    <!-- Leaflet JavaScript -->
@@ -28,7 +28,7 @@
 
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
-    <!-- Our JavaScript -->
+    <!-- JavaScript -->
     <script type="text/javascript" src="static/js/challenge_logic.js"></script>
 </body>
 </html>
